testfx/errors/error_tests/edge_28_switch_case.fx
// Switch语句
x := 2
switch (x) {
    case 1:
        println("one")
        break
    case 2:
        println("two")
        break
    default:
        println("other")
}
